inventory list component

--- a/IMS.WebApp/IMS.WebApp.csproj
+++ b/IMS.WebApp/IMS.WebApp.csproj
@@ -15,4 +15,12 @@
       <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Remove="Pages\Inventories\" />
+    <None Remove="Controls\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Pages\Inventories\" />
+    <Folder Include="Controls\" />
+  </ItemGroup>
 </Project>
